@@ -1,3 +1,7 @@
+2013-11-30	Stephan Linz <linz@li-pro.net>
+
+	* ptxconfig: host-xl-tools: version bump 1.1.0 -> 1.1.1
+
 2013-11-29	Stephan Linz <linz@li-pro.net>
 
 	* common: adapt latest patch sets to linux-3.6
